--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Go Nandão!</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Travel around the World 2022</h1>
-      <img class="globe" src="globe.jpeg" alt="The Earth" width="180px" />
+      <img class="globe" src="./assets/globe.jpeg" alt="The Earth" width="180px" />
     </header>
 
-    <main>
+    <main class="main">
       <h1>Está chegando a hora!</h1>
       <h2>Go Nandão!</h2>
-      <section>
+      <section class="section">
         <h3>Faltam "apenas":</h3>
         <p>
           <span class="days"></span>
