--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <h1>Travel around the World 2022</h1>
-      <img class="globe" src="./assets/globe.jpeg" alt="The Earth" width="180px" />
+      <img class="globe" src="https://i.pinimg.com/originals/2b/07/f6/2b07f62987e987d4e53e84aa8b963b83.gif" alt="The Earth" width="180px" />
     </header>
 
     <main class="main">
